Fixed up spacing

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -7,6 +7,7 @@
   justify-content: space-between;
   padding-left: 1.5em;
   padding-right: 1.5em;
+  position: relative;
 }
 
 #nav-bar .header {
@@ -19,7 +20,7 @@
   padding-top: 1.05em;
 }
 
-.right-side {
+#nav-bar .right-side {
   color: #FFFF;
   display: flex;
   /* width: 30%; */
@@ -29,6 +30,6 @@
   padding-top: 2em;
 } 
 
-.fas {
+#nav-bar .fas {
   color: #ec4242;
 }
